# Qt5CMakeWidget

./: CMakeLists.txt  README.md
qt_cmake_plugin/: QtCommon.cmake
